<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:divider="@drawable/keyboard_divider"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end">

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/key1"
            style="@style/keyboard_number_button"
            android:text="@string/number_one" />

        <TextView
            android:id="@+id/key2"
            style="@style/keyboard_number_button"
            android:text="@string/number_two" />

        <TextView
            android:id="@+id/key3"
            style="@style/keyboard_number_button"
            android:text="@string/number_three" />
    </TableRow>

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/key4"
            style="@style/keyboard_number_button"
            android:text="@string/number_four" />

        <TextView
            android:id="@+id/key5"
            style="@style/keyboard_number_button"
            android:text="@string/number_five" />

        <TextView
            android:id="@+id/key6"
            style="@style/keyboard_number_button"
            android:text="@string/number_six" />
    </TableRow>

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/key7"
            style="@style/keyboard_number_button"
            android:text="@string/number_seven" />

        <TextView
            android:id="@+id/key8"
            style="@style/keyboard_number_button"
            android:text="@string/number_eight" />

        <TextView
            android:id="@+id/key9"
            style="@style/keyboard_number_button"
            android:text="@string/number_nine" />
    </TableRow>

    <TableRow style="@style/keyboard_row">

        <TextView
            android:id="@+id/keySpecial"
            style="@style/keyboard_button" />

        <TextView
            android:id="@+id/key0"
            style="@style/keyboard_number_button"
            android:text="@string/number_zero" />

        <com.example.pocketmoney.utils.CustomKeyboard.view.IconifiedTextView
            android:id="@+id/keyRemove"
            style="@style/keyboard_button"
            android:text="X" />
    </TableRow>
</TableLayout>
