<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.pickupRequest.ManagePickupRequest">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_filter"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:icon="@drawable/ic_baseline_filter_list_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_round_search_24"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_info">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/template_pickup_request_type_3" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.jmm.brsap.scrap24x7.util.MyEmptyView
        android:id="@+id/myEmptyView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:MEVTitle="No Pickup Request !!!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/refresh_layout" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_filter"
        app:singleSelection="true"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_all"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/all"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:chipEndPadding="16dp"
            app:chipStartPadding="16dp"

            />

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_raised"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raised"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:chipEndPadding="16dp"
            app:chipStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_pickup"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:chipEndPadding="16dp"
            app:chipStartPadding="16dp" />


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_date_info"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/Silver"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="Today"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>